# navier-stokes

./: CMakeLists.txt  README.md  run.ps1
src/: UI.cpp  UI.hpp  fluid.cpp  fluid.hpp  main.cpp
